:recycle: Update enable forging check if node is synced for safely activating forging update unit tests
